# Dataset-Datajud

./: Datajud_Dados.ipynb  Dockerfile  Pós_MLET.ipynb  README.md  Tech_Challenge_03 v2.0.ipynb  Tech_Challenge_03.ipynb  data.csv  datajud.py  docker-compose.yaml  main.py  movimentos_julgamento.csv  pyproject.toml  tpu-assuntos.csv  tpu-classes.csv
alembic/: env.py
alembic/versions/: bc1378e4e526_init_db.py
datajud/: app.py  config.py  database.py
datajud/controllers/: import_process.py  predict.py
datajud/models/: ml_datajud.pkl
datajud/routers/: predict.py
datajud/routes/: import_process.py  predict.py
